# Pokemon-Esmeralda

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ola.bash  pyproject.toml  requirements.txt  setup.py
Pokemon Esmeralda - consola/: Algoritmo_De_Batalla.py  Area.py  Bosque.py  Entrenador.py  Estado.py  Estrucutra.py  Main.py  Mochila.py  Movimiento.py  Pokedex.py  Pokemon.py  Tienda.py  data.py  znotas.txt
Pokemon Esmeralda - consola/data_base/: pokemonRojoFuego.db  z-base de datos pokemon Sqlite3.txt
