[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pokemon-esmeralda"
version = "1.0.0"
description = "Un juego de Pokémon desarrollado en Python con interfaz de consola"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Tu Nombre", email = "tu.email@ejemplo.com"}
]
maintainers = [
    {name = "Tu Nombre", email = "tu.email@ejemplo.com"}
]
keywords = ["pokemon", "juego", "consola", "python", "rpg"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Games/Entertainment :: Role-Playing",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    "readchar>=4.0.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=22.0",
    "flake8>=5.0",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/tu-usuario/Pokemon-Esmeralda"
Repository = "https://github.com/tu-usuario/Pokemon-Esmeralda.git"
Issues = "https://github.com/tu-usuario/Pokemon-Esmeralda/issues"
Changelog = "https://github.com/tu-usuario/Pokemon-Esmeralda/blob/main/CHANGELOG.md"

[project.scripts]
pokemon-esmeralda = "pokemon_esmeralda.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["pokemon_esmeralda*"]

[tool.setuptools.package-data]
"*" = ["*.db", "*.txt", "*.jpg", "*.png"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.coverage.run]
source = ["pokemon_esmeralda"]
omit = [
    "*/tests/*",
    "*/test_*",
    "setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]